--- a/data.yaml
+++ b/data.yaml
@@ -2,7 +2,7 @@ train: /content/source/train/images
 val: /content/source/valid/images
 
 nc: 29
-names:  [paprika', 'cucumber', 'apple', 'peach', 'grapefruit', 'tomato', 'persimmon', 'tangerine', 'lettuce', 'cabbage', 'lettuce', 'pear',  'orange', 'tangerine', 'prune','broccoli', 'paprika', 'prune', 'eggplant', 'melon','pumpkin','onion','carrot','radish','enokitake','head lettuce','citrus','large green onion','pepper']
+names:  ['paprika', 'cucumber', 'apple', 'peach', 'grapefruit', 'tomato', 'persimmon', 'tangerine', 'lettuce', 'cabbage', 'lettuce', 'pear',  'orange', 'tangerine', 'prune','broccoli', 'paprika', 'prune', 'eggplant', 'melon','pumpkin','onion','carrot','radish','enokitake','head lettuce','citrus','large green onion','pepper']
 
 
 
